test: adapt tests to new implementation